--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,14 @@
 {
     "manifest_version" : 3,
     "name" : "Canvas Themeinator",
-    "version" : "1",
+    "version" : "1.3",
     "description" : "Gives Canvas more themes",
     "content_scripts": [
         {
             "matches" : ["https://*.instructure.com/*"],
             "css" : ["style.css"],
-            "js" : ["content.js"]
+            "js" : ["content.js"],
+            "run_at" : "document_start"
         }
     ],
     "permissions" : [
